--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,23 @@ h1{
   color: white;
 }
 
+.link, a{
+  font-size: 16px;
+  color: Aquamarine;
+}
+
+
 .banner{
   font-weight: normal;
   font-size: 50px;
+}
+
+.banner2{
+  font-weight: 300;
+  font-size: 42px;
+}
+
+.description{
+  font-size: 21px;
+  color: gray;
 }
