--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,12 @@ h1{
   color: white;
 }
 
+footer{
+  text-align: right;
+  font-size: 21px;
+  color: gray;
+}
+
 .link, a{
   font-size: 16px;
   color: Aquamarine;
